# local-connection-gui-inspector

./: .gitignore  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  elevation.rs  lib.rs  oui.rs  types.rs
src-tauri/src/osi/: layer1.rs  layer2.rs  layer3.rs  layer4.rs  layer5.rs  layer6.rs  layer7.rs  mod.rs
src-tauri/src/tools/: mod.rs  pcap.rs  ping.rs  portscan.rs  traceroute.rs
src/components/ConnectionChain/: ConnectionChain.tsx
src/components/DeviceCard/: DeviceCard.tsx  StatusIndicator.tsx
src/components/LayerFilter/: LayerFilter.tsx
src/components/OsiStack/: OsiStack.tsx
src/components/Settings/: Settings.tsx
src/components/Tools/: PacketCapture.tsx  PingTool.tsx  PortScanTool.tsx  TracerouteTool.tsx
src/components/TreeView/: TreeView.tsx
src/components/ViewMode/: ViewMode.tsx
src/components/common/: Layout.tsx
src/hooks/: useDevices.ts  useElevation.ts
src/i18n/: en.json  index.ts  zh-TW.json
src/lib/: tauri.ts  types.ts
