[package]
name = "local-inspector"
version = "0.1.0"
description = "Local Connection GUI Inspector - OSI Layer Device Monitor"
authors = ["Local Inspector"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Networking
netdev = "0.45"
netstat2 = "0.3"
sysinfo = "0.37"
pcap = "2.2"
pnet = "0.35"
surge-ping = "0.8"
tokio = { version = "1", features = ["full"] }

# Async
futures = "0.3"

# Elevation detection
is_elevated = "0.1"

# Timestamps
chrono = "0.4"

# UUID for device IDs
uuid = { version = "1", features = ["v4"] }

# Platform-specific
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
ioctl-rs = "0.2"
